--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,57 @@
-tensorflow==2.6.2
+absl-py==0.15.0
+astunparse==1.6.3
+cachetools==4.2.4
+certifi==2023.11.17
+charset-normalizer==3.3.2
+clang==5.0
+contourpy==1.1.1
+cycler==0.12.1
+Cython==3.0.8
+flatbuffers==1.12
+fonttools==4.47.2
+gast==0.4.0
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.60.0
+h5py==3.1.0
+idna==3.6
+importlib-metadata==7.0.1
+importlib-resources==6.1.1
+joblib==1.3.2
+keras==2.6.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
+Markdown==3.5.2
+MarkupSafe==2.1.3
+matplotlib==3.3.4
+networkx==3.1
+numpy==1.19.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==23.2
+pillow==10.2.0
+protobuf==3.19.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-fuzzy==0.4.2
 scikit-learn==0.19.2
+scipy==1.10.1
+six==1.15.0
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.6.2
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+threadpoolctl==3.2.0
+typing-extensions==3.7.4.3
+urllib3==2.1.0
+Werkzeug==3.0.1
+wrapt==1.12.1
+zipp==3.17.0
